--- a/css/styles.css
+++ b/css/styles.css
@@ -1153,5 +1153,6 @@ button:hover
 	background: rgb(32, 30, 30);
 	border-radius: 0 0 0.5rem 0.5rem;
 	display: inline-block;
+	visibility: hidden;
 }
 /*===== End of Footer =====*/
